Header and request file

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
