--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "expo": "~39.0.2",
+    "@eva-design/eva": "^2.0.0",
+    "@ui-kitten/components": "^5.0.0",
+    "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
     "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-elements": "^2.3.2",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
