--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "~2.10.1",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "@react-native-community/async-storage": "~1.12.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
