--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,14 +6,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
         node: [10, 12, 14]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
-      - uses: expo/expo-github-action@v5
+      - uses: expo/expo-github-action@5.1.1
         with:
           expo-version: 3.x
       - run: npm i
