--- a/app.json
+++ b/app.json
@@ -21,6 +21,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "",
+    "githubUrl": "https://github.com/filiptronicek/taskord-mobile"
   }
 }
