Sign Out functionality (#8)
* Create signout.js

* Unnecessary function

* Update version

* Add stuff

* Caps locks

Co-Authored-By: Bigint <bigint@icloud.com>

* Show sign out instead of in on home

* Restyled by clang-format

* Change keyboard aware scroll view dependency

* SignOut function in home component

* Format and error catching

* Add labels to sign-in page


Co-authored-by: Restyled.io <commits@restyled.io>
Co-authored-by: Bigint <bigint@icloud.com>

--- a/app.json
+++ b/app.json
@@ -13,14 +13,14 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "",
+    "githubUrl": "https://github.com/filiptronicek/taskord-mobile"
   }
 }
