--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "devDependencies": {
     "@babel/core": "~7.12.10",
     "@types/react": "^16.9.49",
-    "@types/react-native": "^0.63.23"
+    "@types/react-native": "^0.63.23",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
